--- a/components/new submissions/newSubmission.css
+++ b/components/new submissions/newSubmission.css
@@ -1,8 +1,17 @@
+*{
+    box-sizing: border-box;
+}
 .customer-info{
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-gap: 10px;
     padding: 10px;
+    align-items: center;
+    text-align: right;
+}
+body{
+    background-color: antiquewhite;
+   
 }
 
 .sample-data{
@@ -10,42 +19,103 @@
     grid-template-columns: auto auto auto auto;
     grid-gap: 10px;
     padding: 10px;
+    margin: auto;
 }
 
-#row1{
+.row1{
     grid-row: 1 / span 1;
 }
 
-#row2{
+.row2{
     grid-row: 2/ span 1;
 }
 
-#row3{
+.row3{
     grid-row: 3/ span 1;
 }
 
-#row4{
+.row4{
     grid-row: 4/ span 1;
 }
 
-#row5{
+.row5{
     grid-row: 5/ span 1;
 }
 
-#row6{
+.row6{
     grid-row: 6/ span 1;
 }
 
-#row7{
+.row7{
     grid-row: 7/ span 1;
 }
 
-#row8{
+.row8{
     grid-row: 8/ span 1;
 }
 
-#row9{
+.row9{
     grid-row: 9/ span 1;
+}
+
+#home-address{
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+#home-input{
+    width: 70%;
+}
+
+#email{
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
+#email-input{
+    width: 70%;
+}
+
+#city{
+    grid-column-start: 3;
+}
+
+#comments{
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+#comment-input{
+    width: 60%;
+    height: 100%;
+}
+#add-ons{
+    grid-column-start: 1;
+    grid-column-end: 4;
+    margin: auto;
+    display: grid;
+    grid-template-columns: auto auto;
+    text-align: right;
+    column-gap: 20px;
+}
+#previous-management{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    display: flex;
+    justify-content: space-between;
+}
+#previous-management-input{
+    width: 60%;
+
+}
+#sample-size{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    display: flex;
+    justify-content: space-between;
+}
+#sample-size-input{
+    width: 25%;
+    height: 80%;
 }
 
 
@@ -53,14 +123,25 @@
 .customer-info-input{
     margin: 5px;
 }
+.customer-info-input-long{
+    margin: 5px;
+    width: 150%;
+}
 
 .lab-input{
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: 25% 25% 25% 25%;
+    /* grid-template-columns: 200px 150px 150px 100px; */
     grid-gap: 10px;
     padding: 10px;
+    align-items: center;
+    justify-items: center;
+    width: 60%;
+    text-align: right;
+    margin: auto;
 }
 
 #test-data{
-    width: 35%;
+    width: 25%;
+    min-width: 60px;
 }
